# net_worth_tracker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  supervisord.conf
src/frontend/: README.md  package-lock.json  package.json  webpack.config.js
src/frontend/src/: index.js
src/frontend/src/components/: app.js  balance_sheet.js  input_form.js  record.js  stats.js
src/frontend/src/services/: record_service.js  utils.js
src/net_worth_site/: manage.py
src/net_worth_site/net_worth_site/: asgi.py  settings.py  urls.py  wsgi.py
src/net_worth_site/net_worth_site/settings/: __init__.py  base.py  dev.py  prod.py
src/net_worth_site/tracker/: admin.py  models.py  serializers.py  urls.py  views.py
src/net_worth_site/tracker/migrations/: 0001_initial.py  0002_auto_20210307_0224.py  0003_auto_20210307_0248.py  0004_auto_20210307_0315.py
src/net_worth_site/tracker/static/tracker/: styles.css
src/net_worth_site/tracker/templates/tracker/: index.html
src/net_worth_tracker/: views.py
tests/: test_net_worth_tracker.py
